# gtksourceview

./: .gitignore  meson.build
codegen/extradefs/: meson.build
docs/reference/: meson.build
gtksourceview/: meson.build
gtksourceview/gtksourceviewmm/: meson.build
subprojects/: glibmm-2.4.wrap  gtkmm-3.0.wrap
tests/: meson.build
tests/basic/: main.cc
